src/AnalizadorSintactico/CarumaLangParser.java
/* Generated By:JavaCC: Do not edit this line. CarumaLangParser.java */
package AnalizadorSintactico;

public class CarumaLangParser implements CarumaLangParserConstants {
    public static void main(String[] args) {
        System.out.println("Analizador Sint\u00e1ctico CarumaLang - Parser LL(1)");
    }

// =========================================================
// ============== GRAMÁTICA SINTÁCTICA LL(1) ===============
// =========================================================

// -------------------------------------------------------
// 1. PROGRAMA COMPLETO
// -------------------------------------------------------
  final public void Programa() throws ParseException {
    jj_consume_token(CARUMA);
    Declaraciones();
    jj_consume_token(BYEBYE);
    jj_consume_token(0);
  }

// -------------------------------------------------------
// 2. DECLARACIONES
// -------------------------------------------------------
  final public void Declaraciones() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HOLAHOLA:
      case CAECLIENTE:
      case PAPOI:
      case PARAPAPOI:
      case INTCHELADA:
      case GRANITO:
      case CADENA:
      case CARACTER:
      case MIXCHELADA:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Declaracion();
    }
  }

  final public void Declaracion() throws ParseException {
    if (jj_2_1(2)) {
      DeclaracionVariable();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MIXCHELADA:
        Asignacion();
        break;
      case CAECLIENTE:
      case PAPOI:
      case PARAPAPOI:
        EstructuraControl();
        break;
      case HOLAHOLA:
        Impresion();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// -------------------------------------------------------
// 3. DECLARACIÓN DE VARIABLES
// -------------------------------------------------------
  final public void DeclaracionVariable() throws ParseException {
    Tipo();
    ListaIdentificadores();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ESTOES:
      InicializacionOpt();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
  }

  final public void Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTCHELADA:
      jj_consume_token(INTCHELADA);
      break;
    case GRANITO:
      jj_consume_token(GRANITO);
      break;
    case CADENA:
      jj_consume_token(CADENA);
      break;
    case CARACTER:
      jj_consume_token(CARACTER);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ListaIdentificadores() throws ParseException {
    jj_consume_token(MIXCHELADA);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMA);
      jj_consume_token(MIXCHELADA);
    }
  }

  final public void InicializacionOpt() throws ParseException {
    jj_consume_token(ESTOES);
    ListaExpresiones();
  }

  final public void ListaExpresiones() throws ParseException {
    Expresion();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMA);
      Expresion();
    }
  }

// -------------------------------------------------------
// 4. ASIGNACIÓN
// -------------------------------------------------------
  final public void Asignacion() throws ParseException {
    jj_consume_token(MIXCHELADA);
    jj_consume_token(ESTOES);
    Expresion();
  }

// -------------------------------------------------------
// 5. ESTRUCTURAS DE CONTROL
// -------------------------------------------------------
  final public void EstructuraControl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CAECLIENTE:
      EstructuraIf();
      break;
    case PAPOI:
      EstructuraWhile();
      break;
    case PARAPAPOI:
      EstructuraFor();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// -------------------------------------------------------
// 5.1 ESTRUCTURA IF
// -------------------------------------------------------
  final public void EstructuraIf() throws ParseException {
    jj_consume_token(CAECLIENTE);
    jj_consume_token(ABRIENDO);
    Condicion();
    jj_consume_token(CERRANDO);
    jj_consume_token(OPEN);
    Declaraciones();
    jj_consume_token(CLOSE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SINOCAE:
      ElseOpt();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  final public void ElseOpt() throws ParseException {
    jj_consume_token(SINOCAE);
    jj_consume_token(OPEN);
    Declaraciones();
    jj_consume_token(CLOSE);
  }

// -------------------------------------------------------
// 5.2 ESTRUCTURA WHILE
// -------------------------------------------------------
  final public void EstructuraWhile() throws ParseException {
    jj_consume_token(PAPOI);
    jj_consume_token(ABRIENDO);
    Condicion();
    jj_consume_token(CERRANDO);
    jj_consume_token(OPEN);
    Declaraciones();
    jj_consume_token(CLOSE);
  }

// -------------------------------------------------------
// 5.3 ESTRUCTURA FOR
// -------------------------------------------------------
  final public void EstructuraFor() throws ParseException {
    jj_consume_token(PARAPAPOI);
    jj_consume_token(ABRIENDO);
    Inicializacion();
    jj_consume_token(AHIVA);
    Condicion();
    jj_consume_token(AHIVA);
    Incremento();
    jj_consume_token(CERRANDO);
    jj_consume_token(OPEN);
    Declaraciones();
    jj_consume_token(CLOSE);
  }

  final public void Inicializacion() throws ParseException {
    if (jj_2_2(2)) {
      Tipo();
      jj_consume_token(MIXCHELADA);
      jj_consume_token(ESTOES);
      Expresion();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MIXCHELADA:
        jj_consume_token(MIXCHELADA);
        jj_consume_token(ESTOES);
        Expresion();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Incremento() throws ParseException {
    jj_consume_token(MIXCHELADA);
    jj_consume_token(ESTOES);
    Expresion();
  }

// -------------------------------------------------------
// 6. CONDICIONES
// -------------------------------------------------------
  final public void Condicion() throws ParseException {
    ExpresionRelacional();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIOS:
      case DIOSNO:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      OperadorLogico();
      ExpresionRelacional();
    }
  }

  final public void ExpresionRelacional() throws ParseException {
    Expresion();
    OperadorRelacional();
    Expresion();
  }

  final public void OperadorRelacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MENORQUE:
      jj_consume_token(MENORQUE);
      break;
    case MAYORQUE:
      jj_consume_token(MAYORQUE);
      break;
    case MENORIGUALITOQUE:
      jj_consume_token(MENORIGUALITOQUE);
      break;
    case MAYORIGUALITOQUE:
      jj_consume_token(MAYORIGUALITOQUE);
      break;
    case IGUALITO:
      jj_consume_token(IGUALITO);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void OperadorLogico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DIOS:
      jj_consume_token(DIOS);
      break;
    case DIOSNO:
      jj_consume_token(DIOSNO);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// -------------------------------------------------------
// 7. EXPRESIONES ARITMÉTICAS
// -------------------------------------------------------
  final public void Expresion() throws ParseException {
    Termino();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONER:
      case QUITAR:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONER:
        jj_consume_token(PONER);
        break;
      case QUITAR:
        jj_consume_token(QUITAR);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Termino();
    }
  }

  final public void Termino() throws ParseException {
    Factor();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SALEMAS:
      case SALEMENOS:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SALEMAS:
        jj_consume_token(SALEMAS);
        break;
      case SALEMENOS:
        jj_consume_token(SALEMENOS);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Factor();
    }
  }

  final public void Factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERITO:
      jj_consume_token(NUMERITO);
      break;
    case TEXTOLITERAL:
      jj_consume_token(TEXTOLITERAL);
      break;
    case LETRALITERAL:
      jj_consume_token(LETRALITERAL);
      break;
    case MIXCHELADA:
      jj_consume_token(MIXCHELADA);
      break;
    case DIOS:
      jj_consume_token(DIOS);
      break;
    case DIOSNO:
      jj_consume_token(DIOSNO);
      break;
    case ABRIENDO:
      jj_consume_token(ABRIENDO);
      Expresion();
      jj_consume_token(CERRANDO);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// -------------------------------------------------------
// 8. IMPRESIÓN
// -------------------------------------------------------
  final public void Impresion() throws ParseException {
    jj_consume_token(HOLAHOLA);
    jj_consume_token(ABRIENDO);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DIOS:
    case DIOSNO:
    case ABRIENDO:
    case MIXCHELADA:
    case NUMERITO:
    case TEXTOLITERAL:
    case LETRALITERAL:
      Argumentos();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(CERRANDO);
  }

  final public void Argumentos() throws ParseException {
    Expresion();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMA:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMA);
      Expresion();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_3_1() {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_9()) return true;
    if (jj_scan_token(MIXCHELADA)) return true;
    return false;
  }

  private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(15)) {
    jj_scanpos = xsp;
    if (jj_scan_token(16)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(18)) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_scan_token(MIXCHELADA)) return true;
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_3R_9()) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public CarumaLangParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  /** Whether we are looking ahead. */
  private boolean jj_lookingAhead = false;
  private boolean jj_semLA;
  private int jj_gen;
  final private int[] jj_la1 = new int[19];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x78d40,0xd40,0x80000,0x78000,0x0,0x0,0xd00,0x200,0x0,0x6000,0x1f00000,0x6000,0x6000000,0x6000000,0x18000000,0x18000000,0x20006000,0x20006000,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x8,0x8,0x0,0x0,0x4,0x4,0x0,0x0,0x8,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x78,0x78,0x4,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[2];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public CarumaLangParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public CarumaLangParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new CarumaLangParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public CarumaLangParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new CarumaLangParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public CarumaLangParser(CarumaLangParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(CarumaLangParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = jj_lookingAhead ? jj_scanpos : token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List jj_expentries = new java.util.ArrayList();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      boolean exists = false;
      for (java.util.Iterator it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          exists = true;
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              exists = false;
              break;
            }
          }
          if (exists) break;
        }
      }
      if (!exists) jj_expentries.add(jj_expentry);
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[39];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 19; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 39; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 2; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
